<resources>
    <string name="app_name">zomia.news</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Log out</string>
    <string name="recover_password">Recover password</string>
    <string name="new_custom_newsfeed_path">New feed</string>
    <string name="subscriptions_list">Subscriptions list</string>
    <string name="common_newsfeed_list">Common news feed list</string>
    <string name="presets">Presets</string>
    <string name="tag">Tag</string>
    <string name="feed_channel_type">Channel type</string>
    <string name="feeds_list">Feeds list</string>
    <string name="add">Add</string>
    <string name="add_feed">Add feed</string>
    <string name="add_tag">Add tag</string>
    <string name="delete_context_menu_item">Delete</string>
    <string name="edit_context_menu_item">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_text_format">Text format</string>
    <string name="menu_import_opml">Import OPML</string>
    <string name="menu_share_story">Share</string>
    <string name="page_loading_error">Page loading error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_opml_file">Select OPML file</string>
    <string name="opml_file_importing">OPML file is importing</string>
    <string name="go_to_next_story">Next story</string>
    <string name="feed_is_broken">Feed is broken. Please, check the URL.</string>

    <string name="no_server_connection">No server connection</string>
    <string name="connection_problem">Connection problem</string>
    <string name="success">Success</string>
    <string name="invalid_token">Unauthorized access error</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="new_user_registered">New user registered</string>

    <string name="pref_server_address_title">Server address</string>
    <string name="pref_server_address_dialog">Server address</string>

    <string name="pref_server_port_title">Server port</string>
    <string name="pref_server_port_dialog">Server port</string>

    <string name="opml_import_success">OPML file imported</string>
    <string name="opml_import_error">OPML file import error</string>

    <string name="tag_name">Tag Name</string>
    <string name="tag_insert_success">New tag added</string>
    <string name="tag_insert_error">New tag add error</string>
    <string name="tag_edit_success">Tag edit success</string>
    <string name="tag_edit_error">Tag edit error</string>
    <string name="tag_delete_success">Tag deleted</string>
    <string name="tag_delete_error">Tag delete error</string>

    <string name="feed_insert_success">New feed added</string>
    <string name="feed_insert_error">New feed add error</string>

    <string name="feed_delete_success">Feed deleted</string>
    <string name="feed_delete_error">Feed delete error</string>

    <string name="enter_text">Enter text</string>
    <string name="tag_undecided">Undecided</string>
    <string name="status">Status</string>
    <string name="status_read">read</string>
    <string name="status_reading">reading</string>
    <string name="status_unread">new</string>

    <string name="loading_story_source_link">Loading story source URL</string>
    <string name="next_story">Next story</string>
    <string name="previous_story">Previous story</string>
    <string name="share_using">Share using</string>
</resources>
