<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_import_opml"
        android:title="@string/menu_import_opml"
        android:visible="false"
        android:orderInCategory="50"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="90"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_search"
        android:title="@string/app_name"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|always"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/menu_refresh"
        app:showAsAction="collapseActionView|always"
        android:icon="@drawable/ic_action_refresh"
        android:visible="false"
        android:title="@string/menu_refresh"/>
</menu>